<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_slam_conversion</name>
  <version>0.1.0</version>
  <description>ROS2(foxy) GPS / SLAM conversion package</description>
  <maintainer email="naru5135@wavem.net">reidlo</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>gps_slam_conversion_msgs</exec_depend>
  <exec_depend>gps_slam_converter</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
